--- a/app/globals.css
+++ b/app/globals.css
@@ -18,13 +18,42 @@
   /* Border Radius */
   --radius-base: 0.5rem;
   --radius-xs: 0.25rem;
+  --border: #F3F4F3;
+
 }
 
 :root {
+  --primary: #165DFF;
+  --primary-hover: #0E4BD9;
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #080C1A;
+  --secondary: #6A7686;
 }
 
 body {
   font-family: 'Inter';
+}
+
+/* DOT PULSE ANIMATE */
+.dot-pulse {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #4CAF50; /* Warna untuk dot */
+  animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.5);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
